envs/dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scribble-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scribble-backend-dev
  template:
    metadata:
      labels:
        app: scribble-backend-dev
    spec:
      containers:
      - name: scribble-backend
        image: bsalsingh/scribble-api:1753113931
        ports:
        - containerPort: 8080
