envs/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scribble-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scribble-frontend
  template:
    metadata:
      labels:
        app: scribble-frontend
    spec:
      containers:
      - name: scribble-frontend
        image: bsalsingh/scribblefe:1752945975 # Replace with your actual image
        ports:
        - containerPort: 5173
