envs/dev/scribble-backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: scribble-backend
spec:
  replicas: 10
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app: scribble-backend-dev-rollout
  template:
    metadata:
      labels:
        app: scribble-backend-dev-rollout
    spec:
      containers:
      - name: scribble-backend
        image: bsalsingh/scribble-api:1753293180
        ports:
        - containerPort: 8080
  strategy:
    canary:
      canaryService: scribble-backend-preview
      stableService: scribble-backend-stable
      steps:
      - setWeight: 20
      - pause: {duration: 300}
      - setWeight: 50
      - pause: {duration: 300}
      - setWeight: 100
