envs/dev/scribble-canary-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: scribble-backend-stable
spec:
  selector:
    app: scribble-backend-dev-rollout
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: scribble-backend-preview
spec:
  selector:
    app: scribble-backend-dev-rollout
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
